# kite-rag-test

./: package.json
backend/: .gitignore  EMBEDDINGS_SETUP.md  fallback_embeddings.py  jina_embeddings.py  main.py  pyproject.toml  test_connectivity.py  test_embeddings.py
backend/testdir/: main.py
